[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typecho-agent-api"
version = "1.0.0"
description = "为 LLM Agent 提供 Typecho 博客增删改文章 + 腾讯云 COS 图片上传能力（Flask HTTP API）"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "PyMySQL>=1.1.0",
    "DBUtils>=3.1.0",
    "python-dotenv>=1.0.0",
    "cos-python-sdk-v5>=1.9.29",
    "pydantic>=2.5.0",
    "Flask>=3.0.0",
]

[project.optional-dependencies]
gunicorn = ["gunicorn>=21.0"]

[tool.setuptools.packages.find]
where = ["src"]
